--- a/members/static/style.css
+++ b/members/static/style.css
@@ -122,6 +122,28 @@ body {
     cursor: pointer;
 }
 
+.department-button-container {
+    display: grid; 
+    grid-template-columns: repeat(5, 1fr); 
+    gap: 30px; 
+}
+
+.department-button {
+    font-size: 17px; 
+    height: 60px; 
+    color: white; 
+    background-color: var(--back-color2); 
+    border: 1px solid var(--back-color2);
+    border-radius: 10px; 
+    cursor: pointer;
+    box-shadow: 0px 0px 10px #384156;
+    transition: box-shadow 0.25s ease-out;
+}
+
+.department-button:hover {
+    box-shadow: 0px 0px 15px var(--main-color1);
+}
+
 .course-title {
     &.id {
         color: var(--main-color1);
@@ -147,6 +169,7 @@ body {
 
 .course-card:hover {
     box-shadow: 0px 0px 15px var(--main-color1);
+    transition: box-shadow 0.25s ease-out;
 }
 
 .course-card-back {
